2005-08-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ArrayType.cs:
		Style.
	  Mono.Cecil.Implem/ParameterDefinition.cs:
		Correct a bug in module obtention.
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Correct a bug in arrays's signature reading.

	* Mono.Cecil.dll.sources
	  Mono.Cecil/IReflectionVisitor.cs
	  Mono.Cecil/IModuleDefinitionCollection.cs
	  Mono.Cecil/IInterfaceCollection.cs
	  Mono.Cecil/IProperty.cs
	  Mono.Cecil/BaseReflectionVisitor.cs
	  Mono.Cecil/INestedTypeCollection.cs
	  Mono.Cecil/ITypeReferenceCollection.cs
	  Mono.Cecil/IParameter.cs
	  Mono.Cecil/IExternTypeCollection.cs
	  Mono.Cecil/IField.cs
	  Mono.Cecil/IArrayDimensionCollection.cs
	  Mono.Cecil/IMethodDefinitionCollection.cs
	  Mono.Cecil/IPropertyDefinitionCollection.cs
	  Mono.Cecil/IAssemblyNameReferenceCollection.cs
	  Mono.Cecil/IModuleReferenceCollection.cs
	  Mono.Cecil/IHasConstant.cs
	  Mono.Cecil/ISecurityDeclarationCollection.cs
	  Mono.Cecil/IMetadataTokenProvider.cs
	  Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil/BaseStructureVisitor.cs
	  Mono.Cecil/IResourceCollection.cs
	  Mono.Cecil/IParameterDefinitionCollection.cs
	  Mono.Cecil/IEventDefinitionCollection.cs
	  Mono.Cecil/ITypeDefinitionCollection.cs
	  Mono.Cecil/IFieldDefinitionCollection.cs
	  Mono.Cecil/ICustomAttributeCollection.cs
	  Mono.Cecil/IOverrideCollection.cs
	  Mono.Cecil.Cil/IExceptionHandlerCollection.cs
	  Mono.Cecil.Cil/IVariableDefinitionCollection.cs
	  Mono.Cecil.Cil/IInstructionCollection.cs
	  CodeGen/cecil-gen.rb
	  CodeGen/cecil-gen-types.rb
	  CodeGen/templates/IndexedCollectionImplem.cs
	  CodeGen/templates/NamedCollectionImplem.cs
	  CodeGen/templates/IIndexedCollection.cs
	  CodeGen/templates/LzIndexedCollectionImplem.cs
	  CodeGen/templates/INamedCollection.cs
	  CodeGen/templates/LzNamedCollectionImplem.cs
	  CodeGen/cecil.xml
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/InterfaceCollection.cs